deploy/kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roguelike
  namespace: roguelike
spec:
  selector:
    matchLabels:
      app: roguelike
  template:
    metadata:
      labels:
        app: roguelike
    spec:
      containers:
        - name: roguelike
          image: daluca/roguelike-tutorial
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: healthz
              port: http
            periodSeconds: 3
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: healthz
              port: http
            periodSeconds: 3
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
