deploy/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: roguelike
  namespace: roguelike
spec:
  selector:
    app: roguelike
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
