deploy/kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roguelike
  namespace: roguelike
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - roguelike.daluca.io
      secretName: roguelike-tls
  rules:
    - host: roguelike.daluca.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: roguelike
                port:
                  name: http
